# apps/auth-service/src/routes/auth.routes.ts
@@ -1,5 +1,5 @@
 import express, {Router} from 'express';
-import { userRegister,  verifyUserRegisteration} from '../controller/auth.controller';
+import { userLogin, userRegister,  verifyUserRegisteration} from '../controller/auth.controller';
 
 
 const autRrouter: Router = express.Router();
@@ -8,6 +8,7 @@ const autRrouter: Router = express.Router();
 
 autRrouter.post('/user-register', userRegister);
 autRrouter.post('/user-verify', verifyUserRegisteration); 
+autRrouter.post('/user-login', userLogin);
 
 
 export default autRrouter;
